--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<head >
+<head>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LTSEJNJV2B"></script>
@@ -15,7 +15,7 @@
   </script>
 
   <title>Kaiqiang</title>
-  <meta name="color-scheme" content="light dark">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -63,7 +63,7 @@
 <body class="w3-content" style="max-width:888px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-text-light-grey w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-center w3-display-container w3-padding-16">
     <h3><b>
       <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo1.png" >
@@ -96,16 +96,16 @@
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay  w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
 
   <!-- Push down content on small screens -->
-  <div class="w3-hide-large w3-black " style="margin-top:80px"></div>
+  <div class="w3-hide-large" style="margin-top:80px"></div>
 
 <!-- The Biography Section -->
-    <div class="w3-container w3-text-light-grey w3-padding-32" id="biography">
+    <div class="w3-container w3-padding-32" id="biography">
       <h2>Biography</h2>
         <p class="w3-left-align" style="line-height:200%">
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
@@ -128,7 +128,7 @@
   </div>
 
 <!-- The News Section -->
-  <div class="w3-container w3-text-light-grey w3-black w3-padding-32" id="news">
+  <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
       <p><li> 04/2024, an <strong><span style="color:FireBrick">invited talk</span></strong> will be given at <a style="color: #4682B4" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
       <p><li> 01/2024, a <strong><span style="color:FireBrick">cover paper</span></strong> was published on <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
@@ -140,7 +140,7 @@
 
 
  <!-- The Publications Section -->
-  <div class="w3-container w3-text-light-grey  w3-padding-32" id="publications">
+  <div class="w3-container   w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -158,7 +158,7 @@
         <br>
         <strong>News:</strong> <a style="color: #4682B4" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #4682B4" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #4682B4" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LSA</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE</a>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> Phase recovery (PR) refers to calculating the phase of the light field from its intensity measurements. As exemplified from quantitative phase imaging and coherent diffraction imaging to adaptive optics, PR is essential for reconstructing the refractive index distribution or topography of an object and correcting the aberration of an imaging system. In recent years, deep learning (DL), often implemented through deep neural networks, has provided unprecedented support for computational imaging, leading to more efficient solutions for various PR problems. In this review, we first briefly introduce conventional methods for PR. Then, we review how DL provides support for PR from the following three stages, namely, pre-processing, in-processing, and post-processing. We also review how DL is used in phase image processing. Finally, we summarize the work in DL for PR and provide an outlook on how to better use DL to improve the reliability and efficiency of PR. Furthermore, we present a live-updating resource (<a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">https://github.com/kqwang/phase-recovery</a>) for readers to learn more about PR.</div>
         <br>
         <a href="https://www.nature.com/documents/Editor_highlight_2024-2_.jpg" target="_blank">
@@ -179,7 +179,7 @@
         <br>
         <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #4682B4" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <strong><span style="color:FireBrick">first article of this journal</span></strong>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> Phase unwrapping is an indispensable step for many optical imaging and metrology techniques. The rapid development of deep learning has brought ideas to phase unwrapping. In the past four years, various phase dataset generation methods and deep-learning-involved spatial phase unwrapping methods have emerged quickly. However, these methods were proposed and analyzed individually, using different strategies, neural networks, and datasets, and applied to different scenarios. It is thus necessary to do a detailed comparison of these deep-learning-involved methods and the traditional methods in the same context. We first divide the phase dataset generation methods into random matrix enlargement, Gauss matrix superposition, and Zernike polynomials superposition, and then divide the deep-learning-involved phase unwrapping methods into deep-learning-performed regression, deep-learning-performed wrap count, and deep-learning-assisted denoising. For the phase dataset generation methods, the richness of the datasets and the generalization capabilities of the trained networks are compared in detail. In addition, the deep-learning-involved methods are analyzed and compared with the traditional methods in ideal, noisy, discontinuous, and aliasing cases. Finally, we give suggestions on the best methods for different situations and propose the potential development direction for the dataset generation method, neural network structure, generalization ability enhancement, and neural network training strategy for the deep-learning-involved spatial phase unwrapping methods.</div>
         </p>
 
@@ -198,7 +198,7 @@
         <br>
         <em>PhotoniX</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> Deep learning neural networks are used for wavefront sensing and aberration correction in atmospheric turbulence without any wavefront sensor (i.e. reconstruction of the wavefront aberration phase from the distorted image of the object). We compared and found the characteristics of the direct and indirect reconstruction ways:(i) directly reconstructing the aberration phase; (ii) reconstructing the Zernike coefficients and then calculating the aberration phase. We verified the generalization ability and performance of the network for a single object and multiple objects. What's more, we verified the correction effect for a turbulence pool and the feasibility for a real atmospheric turbulence environment.</div>
         </p>
 
@@ -249,7 +249,7 @@
         <br>
         <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> The transport of intensity equation (TIE) is an ideal candidate for phase imaging with partially coherent illuminations. TIE has the advantages of simplicity in phase calculation due to its closed-form solution and no requirement for a reference beam and phase unwrapping due to its non-interferometric nature. However, TIE requires multiple through-focus intensity images, and is very sensitive to image boundaries and noise. Thus, in this paper, we combine deep learning with TIE, abbreviated as dTIE. After being trained by TIE phase results, the dTIE retains the advantages of TIE, and overcomes the shortcomings of TIE as follows: (i) only one de-focus intensity image is required for phase imaging while the result is very close to the TIE result with SSIM index reaches 0.95, enabling more efficient phase imaging; (ii) the boundary problem automatically disappears due to the translation invariance of the convolutional networks; (iii) it is insensitive to noise even with very heavy noise. All these enhancements are verified in the application of dTIE for phase imaging of real cells.</div>
         </p>
 
@@ -260,7 +260,7 @@
         <br>
         <em>Optics Letters</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.395445">paper</a>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> In this Letter, a deep learning solution (Y4-Net, four output channels network) to one-shot dual-wavelength digital holography is proposed to simultaneously reconstruct the complex amplitude information of both wavelengths from a single digital hologram with high efficiency. In the meantime, by using single-wavelength results as network ground truth to train the Y4-Net, the challenging spectral overlapping problem in common-path situations is solved with high accuracy.</div>
         </p>
 
@@ -288,7 +288,7 @@
         <br>
         <em>Optics Letters</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <strong><span style="color:FireBrick">editors' pick </span></strong>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> In this Letter, for the first time, to the best of our knowledge, we propose a digital holographic reconstruction method with a one-to-two deep learning framework (Y-Net). Perfectly fitting the holographic reconstruction process, the Y-Net can simultaneously reconstruct intensity and phase information from a single digital hologram. As a result, this compact network with reduced parameters brings higher performance than typical network variants. The experimental results of the mouse phagocytes demonstrate the advantages of the proposed Y-Net.</div>
         </p>
 
@@ -299,7 +299,7 @@
         <br>
         <em>Optics express</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <strong><span style="color:FireBrick">ESI highly cited paper </span></strong>
         <br>
-        <div style="height:150px;overflow-y:auto" class="w3-black">
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> Phase unwrapping is an important but challenging issue in phase measurement. Even with the research efforts of a few decades, unfortunately, the problem remains not well solved, especially when heavy noise and aliasing (undersampling) are present. We propose a database generation method for phase-type objects and a one-step deep learning phase unwrapping method. With a trained deep neural network, the unseen phase fields of living mouse osteoblasts and dynamic candle flame are successfully unwrapped, demonstrating that the complicated nonlinear phase unwrapping task can be directly fulfilled in one step by a single deep neural network. Excellent anti-noise and anti-aliasing performances outperforming classical methods are highlighted in this paper.</div>
         </p>
 
@@ -386,7 +386,7 @@
 
 
 <!--&lt;!&ndash; The Services Section &ndash;&gt;-->
-<!--  <div class="w3-container w3-black w3-padding-32" id="service">-->
+<!--  <div class="w3-container w3-light-grey w3-padding-32" id="service">-->
 <!--    <h2>Services</h2>-->
 <!--      <p><li> </p>-->
 <!--  </div>-->
@@ -394,7 +394,7 @@
 
 
 <!-- The Services Section -->
-  <div class="w3-container w3-text-light-grey w3-black w3-padding-32" id="services">
+  <div class="w3-container w3-light-grey w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
     <strong>Nature</strong>: Light: Science & Applications.
@@ -413,7 +413,7 @@ of America A, Optics Continuum.
 
 
 <!-- The Educations Section -->
-  <div class="w3-container w3-text-light-grey w3-padding-32" id="educations">
+  <div class="w3-container w3-padding-32" id="educations">
     <h2>Educations</h2>
       <li><em>2016-2022</em>, Northwestern Polytechnical University, Xi'an, China.
       <br>
@@ -427,7 +427,7 @@ of America A, Optics Continuum.
   </div>
 
   <!-- The awards Section -->
-  <div class="w3-container w3-text-light-grey w3-black w3-padding-32" id="awards">
+  <div class="w3-container w3-light-grey w3-padding-32" id="awards">
     <h2>Awards</h2>
       <p>
       <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.
@@ -437,7 +437,7 @@ of America A, Optics Continuum.
   </div>
 
     <!-- The Resources Section -->
-  <div class="w3-container w3-text-light-grey  w3-padding-32" id="resources">
+  <div class="w3-container  w3-padding-32" id="resources">
     <h2>Resources</h2>
       <p>
         <ol>
